--- a/app/client/templates/shared/access_denied/access_denied.scss
+++ b/app/client/templates/shared/access_denied/access_denied.scss
@@ -1,5 +1,5 @@
 /*****************************************************************************/
-/* main: Style */
+/* AccessDenied: Style */
 /*****************************************************************************/
-.main {
+.access-denied {
 }
